# bijux-phylogenetics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.shared.yml  mkdocs.yml  pyproject.toml  tox.ini
.bijux/: checks.consumer.json
.bijux/shared/: shared-dir-sha256.txt
.github/: bijux-std-shared.sha256  dependabot.yml  release.env
.github/standards/: bijux-std.sha  repo-config.manifest.json
.github/workflows/: ci.yml  deploy-docs.yml  evidence-governance.yml  publish-readiness.yml  release-artifacts.yml  release-ghcr.yml  release-github.yml  release-pypi.yml  repository-governance.yml  runtime-quality.yml  verify.yml
apis/: README.md
apis/bijux-phylogenetics/v1/: pinned_openapi.json  schema.hash  schema.yaml
configs/: config_ssot.toml  coveragerc.ini  deptry.toml  mypy.ini  package-lock.json  package.json  package_boundaries.toml  publication_readiness.toml  pytest.ini  ruff.toml
data/: README.md
datasets/: README.md
docs/: badges.md  index.md
docs/01-bijux-phylogenetics/: index.md
docs/02-evidence-book/: index.md
docs/03-bijux-phylogenetics-maintain/: index.md
docs/internal/: index.md
docs/internal/maintain/: index.md
docs/public/phylogenetics/: index.md
docs/public/phylogenetics-evidence-book/: index.md
docs/public/phylogenetics-evidence-book/pcm1-primate-longevity-signal/: data-and-tree-preparation.md  index.md  signal-and-ancestral-results.md
docs/public/phylogenetics-evidence-book/pcm2-primate-pgls-and-signal/: index.md  model-comparisons-and-pgls.md  signal-diagnostics-and-open-boundaries.md
docs/public/phylogenetics/architecture/: index.md  (+3 more)
docs/report/: README.md
evidence-book/: README.md
evidence-book/index/: analytical-surface-coverage.json  analytical-surface-coverage.md  catalog.md  claim-map.json  claim-reaudit.json  claim-reaudit.md  closure-criteria.json  closure-criteria.md  completion-gates.json  completion-gates.md  coverage-gaps.json  coverage-gaps.md  evidence-index.json  evidence-maturity-scorecard.json  evidence-maturity-scorecard.md  evidence-review-ritual.json  evidence-review-ritual.md  false-confidence-audit.json  false-confidence-audit.md  fragile-example-audit.json  fragile-example-audit.md  freshness-report.json  freshness-report.md  integrity-report.json  integrity-report.md  mismatch-archive.json  mismatch-archive.md  parity-dashboard.json  parity-dashboard.md  portability-audit.json  portability-audit.md  regeneration-contract.json  regeneration-contract.md  scientific-debt-register.json  scientific-debt-register.md  teaching-and-migration.json  teaching-and-migration.md  verdict-workflows.json  verdict-workflows.md
evidence-book/phylogenetic-101/: README.md  build_report.py
evidence-book/studies/comparative-trust-boundaries/: README.md  build_evidence.py  claim-registry.json  family-index.json  source-fragment-map.json  study.json
evidence-book/studies/primate-longevity-signal/: README.md  build_evidence.py  claim-registry.json  data-preparation-bundles.json  data-preparation-bundles.md  family-index.json  migration-guide.json  migration-guide.md  parity-policy.json  source-fragment-map.json  structural-parity-table.json  structural-parity-table.md  student-safe-reproducibility.json  student-safe-reproducibility.md  study.json  teaching-guide.json  teaching-guide.md
evidence-book/studies/primate-pgls-and-signal/: README.md  build_evidence.py  claim-registry.json  evidence-registry.json  family-index.json  migration-guide.json  migration-guide.md  parity-policy.json  source-fragment-map.json  student-safe-reproducibility.json  student-safe-reproducibility.md  study.json  teaching-guide.json  teaching-guide.md
evidence-book/studies/taxon-trust/: README.md  build_evidence.py  study.json
evidence-book/taxon-trust/: README.md  build_report.py
evidence-book/taxon-trust/examples/: README.md
examples/: README.md
makes/: api-freeze.mk  env.mk  packages.mk  publish.mk  root.mk
makes/bijux-py/: bijux.mk  package-catalog.mk  package.mk
makes/bijux-py/ci/: lint.mk  quality.mk  sbom.mk  security.mk
reports/: README.md
reports/phylogenetic-101/examples/: README.md  registry.json
reports/phylogenetic-101/reference/: primate_lifespan_signal_reference_bijux.py
reports/taxon-trust/: build_report.py
reports/taxon-trust/examples/: registry.json
tests/: README.md
(+497 files in other folders)
