[build-system]
requires = ["hatchling>=1.27.0,<1.30", "hatch-vcs>=0.4.0,<1.0"]
build-backend = "hatchling.build"

[project]
name = "bijux-phylogenetics-repository"
description = "Repository workspace for bijux-phylogenetics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://bijux.io/bijux-phylogenetics/"
Repository = "https://github.com/bijux/bijux-phylogenetics"
Issues = "https://github.com/bijux/bijux-phylogenetics/issues"
Changelog = "https://github.com/bijux/bijux-phylogenetics/blob/main/CHANGELOG.md"
Security = "https://github.com/bijux/bijux-phylogenetics/blob/main/SECURITY.md"

[dependency-groups]
dev = [
    "bijux-phylogenetics[dev]",
    "phylogenetics[dev]",
    "bijux-phylogenetics-dev[dev]",
    "mkdocs-redirects>=1.2.1,<2.0",
    "PyYAML>=6.0,<7.0",
    "prance>=23.6.21.0",
    "openapi-spec-validator>=0.7.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
major_version_zero = true
annotated_tag = true
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = false

[tool.bijux_phylogenetics]
api_dir = "apis"
packages = [
    "bijux-phylogenetics",
    "phylogenetics",
    "bijux-phylogenetics-dev",
]
docs_package = "bijux-phylogenetics-dev"
config_dir = "configs"
make_dir = "makes"

[tool.uv.sources]
bijux-phylogenetics = { workspace = true }
phylogenetics = { workspace = true }
bijux-phylogenetics-dev = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.hatch.version]
source = "vcs"
tag-pattern = "^v(?P<version>.*)$"
fallback-version = "0.1.0"
raw-options = { git_describe_command = "git describe --dirty --tags --long --match 'v*'", local_scheme = "dirty-tag", version_scheme = "guess-next-dev", root = ".", search_parent_directories = true }

[tool.hatch.build.targets.wheel]
bypass-selection = true
